hphp/test/zend/good/ext/spl/tests/iterator_count.php.expectf

Warning: iterator_count() expects exactly 1 parameter, 0 given in %s/iterator_count.php on line 6

Warning: iterator_count() expects exactly 1 parameter, 2 given in %s/iterator_count.php on line 9

Catchable fatal error: Argument must implement interface Traversable in %s/iterator_count.php on line 11
